Add New Section

--- a/Backend Project/Views/Home/Index.cshtml
+++ b/Backend Project/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             {
                 <div class="swiper-slide animation-style-01">
                     <div class="slide-inner style-1 bg-height"
-                     data-bg-image="assets/images/slider/bg/@slider.Image">
+                     data-bg-image="assets/images/slider/bg/1-1.jpg">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 order-2 order-lg-1 align-self-center">
@@ -32,7 +32,7 @@
                                     <div class="inner-img">
                                         <div class="scene fill">
                                             <div class="expand-width" data-depth="0.2">
-                                                <img src="~/assets/images/website-images//1-1-524x617.png"
+                                                <img src="~/assets/images/website-images//@slider.Image"
                                                  alt="Inner Image" />
                                             </div>
                                         </div>
@@ -303,6 +303,7 @@
 
                         </div>
                     </div>
+
 
                     <div class="tab-pane fade"
                          id="latest"
