--- a/Backend Project/Views/About/Index.cshtml
+++ b/Backend Project/Views/About/Index.cshtml
@@ -1,11 +1,11 @@
-﻿
+﻿@model AboutVM
 @{
     ViewData["Title"] = "Index";
 }
 
 <main class="main-content">
     <div class="breadcrumb-area breadcrumb-height"
-         data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
+         data-bg-image="assets/images/breadcrumb/bg/@Model.HeaderBackgrounds["AllPagesBackground"]">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-12">
@@ -39,7 +39,7 @@
                             deserunt mollit anim id est laborum. Sed ut perspiciatis
                         </p>
                         <div class="about-signature">
-                            <img src="assets/images/website-images/about/icon/2.png"
+                            <img src="~/assets/images/website-images/about/icon/2.png"
                                  alt="Signature" />
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="shipping-item">
                             <div class="shipping-img">
-                                <img src="assets/images/website-images/car.png"
+                                <img src="~/assets/images/website-images/car.png"
                                      alt="Shipping Icon" />
                             </div>
                             <div class="shipping-content">
@@ -68,7 +68,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
                         <div class="shipping-item">
                             <div class="shipping-img">
-                                <img src="assets/images/website-images/card.png"
+                                <img src="~/assets/images/website-images/card.png"
                                      alt="Shipping Icon" />
                             </div>
                             <div class="shipping-content">
@@ -80,7 +80,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
                         <div class="shipping-item">
                             <div class="shipping-img">
-                                <img src="assets/images/website-images/service.png"
+                                <img src="~/assets/images/website-images/service.png"
                                      alt="Shipping Icon" />
                             </div>
                             <div class="shipping-content">
@@ -182,7 +182,7 @@
                 <div class="col-lg-3 col-sm-6 pt-sm-5">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="assets/images/website-images/about/team/1-1-270x270.png"
+                            <img src="~/assets/images/website-images/about/team/1-1-270x270.png"
                                  alt="Team Member" />
                             <div class="inner-content">
                                 <h2 class="team-member-name">Micheal Murphy</h2>
@@ -234,7 +234,7 @@
                 <div class="col-lg-3 col-sm-6 pt-5 pt-sm-0">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="assets/images/website-images/about/team/1-2-270x270.png"
+                            <img src="~/assets/images/website-images/about/team/1-2-270x270.png"
                                  alt="Team Member" />
                             <div class="inner-content">
                                 <h2 class="team-member-name">Kari Rasmus</h2>
@@ -286,7 +286,7 @@
                 <div class="col-lg-3 col-sm-6 pt-5">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="assets/images/website-images/about/team/1-3-270x270.png"
+                            <img src="~/assets/images/website-images/about/team/1-3-270x270.png"
                                  alt="Team Member" />
                             <div class="inner-content">
                                 <h2 class="team-member-name">Britney Cooper</h2>
@@ -338,7 +338,7 @@
                 <div class="col-lg-3 col-sm-6 pt-5 pt-sm-0">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="assets/images/website-images/about/team/1-4-270x270.png"
+                            <img src="~/assets/images/website-images/about/team/1-4-270x270.png"
                                  alt="Team Member" />
                             <div class="inner-content">
                                 <h2 class="team-member-name">Marissa Swan</h2>
@@ -402,31 +402,31 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <a class="brand-item" href="#">
-                                        <img src="assets/images/website-images/brand/1-1.png"
+                                        <img src="~/assets/images/website-images/brand/1-1.png"
                                              alt="Brand Image" />
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a class="brand-item" href="#">
-                                        <img src="assets/images/website-images/brand/1-2.png"
+                                        <img src="~/assets/images/website-images/brand/1-2.png"
                                              alt="Brand Image" />
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a class="brand-item" href="#">
-                                        <img src="assets/images/website-images/brand/1-3.png"
+                                        <img src="~/assets/images/website-images/brand/1-3.png"
                                              alt="Brand Image" />
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a class="brand-item" href="#">
-                                        <img src="assets/images/website-images/brand/1-4.png"
+                                        <img src="~/assets/images/website-images/brand/1-4.png"
                                              alt="Brand Image" />
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a class="brand-item" href="#">
-                                        <img src="assets/images/website-images/brand/1-5.png"
+                                        <img src="~/assets/images/website-images/brand/1-5.png"
                                              alt="Brand Image" />
                                     </a>
                                 </div>
