--- a/Backend Project/Views/Blog/Index.cshtml
+++ b/Backend Project/Views/Blog/Index.cshtml
@@ -1,11 +1,11 @@
-﻿
+﻿@model BlogVM
 @{
     ViewData["Title"] = "Index";
 }
 
 <main class="main-content">
     <div class="breadcrumb-area breadcrumb-height"
-         data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
+         data-bg-image="assets/images/breadcrumb/bg/@Model.HeaderBackgrounds["AllPagesBackground"]">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-12">
