Add Shop New Sections

--- a/Backend Project/Views/Home/Index.cshtml
+++ b/Backend Project/Views/Home/Index.cshtml
@@ -144,7 +144,7 @@
                                 <div class="col-xl-3 col-md-4 col-sm-6">
                                     <div class="product-item">
                                         <div class="product-img">
-                                            <a href="shop.html">
+                                            <a asp-controller="shop" asp-action="ProductDetail" asp-route-id="@featured.Id">
                                                 <img class="primary-img"
                                                  src="~/assets/images/website-images//@featured.MainImage"
                                                  alt="Product Images" />
@@ -205,7 +205,7 @@
                                                     }
                                                     @for (int i = 0; i < 5 - featured.Rate; i++)
                                                     {
-                                                        <li><i class="fa fa-star"></i></li>
+                                                        <li><i class="fa fa-star" style="color:gray"></i></li>
                                                     }
 
                                                 </ul>
@@ -231,7 +231,7 @@
                                 <div class="col-xl-3 col-md-4 col-sm-6">
                                     <div class="product-item">
                                         <div class="product-img">
-                                            <a href="shop.html">
+                                            <a asp-controller="shop" asp-action="ProductDetail" asp-route-id="@bestsellerProduct.Id">
                                                 <img class="primary-img"
                                                  src="~/assets/images/website-images//@bestsellerProduct.MainImage"
                                                  alt="Product Images" />
@@ -292,7 +292,7 @@
                                                     }
                                                     @for (int i = 0; i < 5 - bestsellerProduct.Rate; i++)
                                                     {
-                                                        <li><i class="fa fa-star"></i></li>
+                                                        <li><i class="fa fa-star" style="color:gray"></i></li>
                                                     }
                                                 </ul>
                                             </div>
@@ -315,7 +315,7 @@
                                 <div class="col-xl-3 col-md-4 col-sm-6">
                                     <div class="product-item">
                                         <div class="product-img">
-                                            <a href="shop.html">
+                                            <a asp-controller="shop" asp-action="ProductDetail" asp-route-id="@latestProduct.Id">
                                                 <img class="primary-img"
                                                  src="~/assets/images/website-images//@latestProduct.MainImage"
                                                  alt="Product Images" />
@@ -500,7 +500,7 @@
                         {
                             <div class="swiper-slide product-item">
                                 <div class="product-img">
-                                    <a href="shop.html">
+                                    <a asp-controller="shop" asp-action="ProductDetail" asp-route-id="@newProduct.Id">
                                         <img class="primary-img"
                                          src="~/assets/images/website-images//@newProduct.MainImage"
                                          alt="Product Images" />
@@ -555,12 +555,12 @@
                                     </div>
                                     <div class="rating-box">
                                         <ul>
-                                            @for (int i = 0; i < Model.FeaturedProduct.FirstOrDefault().Rate; i++)
+                                            @for (int i = 0; i < newProduct.Rate; i++)
                                             {
                                                 <li><i class="fa fa-star"></i></li>
 
                                             }
-                                            @for (int i = 0; i < 5 - (int)Model.FeaturedProduct.FirstOrDefault().Rate; i++)
+                                            @for (int i = 0; i < 5 - (int)newProduct.Rate; i++)
                                             {
                                                 <li><i class="fa fa-star" style="color:darkgrey"></i></li>
 
