--- a/Backend Project/Views/Shared/Components/Header/Default.cshtml
+++ b/Backend Project/Views/Shared/Components/Header/Default.cshtml
@@ -733,25 +733,35 @@
                             data-tippy-theme="sharpborder"></button>
                 </div>
                 <div class="modal-body">
+
+
                     <div class="modal-search">
+
                         <span class="searchbox-info">
                             Start typing and press Enter to search or ESC to
                             close
                         </span>
+
                         <form action="#" class="hm-searchbox">
-                            <input type="text"
+                            <input class="input-search"
+                                   type="text"
                                    name="Search..."
                                    value="Search..."
                                    onblur="if(this.value==''){this.value='Search...'}"
                                    onfocus="if(this.value=='Search...'){this.value=''}"
                                    autocomplete="off" />
+
                             <button class="search-btn"
                                     type="submit"
                                     aria-label="searchbtn">
                                 <i class="pe-7s-search"></i>
                             </button>
                         </form>
+
                     </div>
+
+
+
                 </div>
             </div>
         </div>
