--- a/Backend Project/Views/Shared/_ProductsPartial.cshtml
+++ b/Backend Project/Views/Shared/_ProductsPartial.cshtml
@@ -5,7 +5,7 @@
     <div class="col-md-4 col-sm-6">
         <div class="product-item">
             <div class="product-img">
-                <a href="single-product-variable.html">
+                <a asp-controller="Shop" asp-action="ProductDetail" asp-route-id="@product.Id"> 
                     <img class="primary-img"
                      src="assets/images/website-images/@product.MainImage"
                      alt="Product Images" />
@@ -61,11 +61,11 @@
                 </div>
                 <div class="rating-box">
                     <ul>
-                        @for (int i = 0; i < Model.FirstOrDefault().Rate; i++)
+                        @for (int i = 0; i < product.Rate; i++)
                         {
                             <li><i class="fa fa-star"></i></li>
                         }
-                        @for (int i = 0; i < 5 - Model.FirstOrDefault().Rate; i++)
+                        @for (int i = 0; i < 5 - product.Rate; i++)
                         {
                             <li><i class="fa fa-star"></i></li>
                         }
