--- a/Backend Project/Views/Shop/Index.cshtml
+++ b/Backend Project/Views/Shop/Index.cshtml
@@ -31,11 +31,16 @@
                     <div class="sidebar-area">
                         <div class="widgets-searchbox">
                             <form id="widgets-searchbox">
-                                <input class="input-field"
-                                       type="text"
-                                       placeholder="Search" />
+                                <ul id="search-list">
+                                    <li>
+                                        <input class="input-field"
+                                               type="text"
+                                               placeholder="Search" />
+                                    </li>
+                                </ul>
+                                
                                 <button class="widgets-searchbox-btn" type="submit">
-                                    <i class="fa fa-search"></i>
+                                    @*<i class="fa fa-search"></i>*@
                                 </button>
                             </form>
                         </div>
@@ -51,7 +56,7 @@
                                             {
                                                 sumCategoryProducts += (int)category.ProductCategories?.Count();
                                             }
-                                            All <span>(65)</span>
+                                            All <span>(@sumCategoryProducts)</span>
                                         </a>
                                     </li>
 
@@ -121,24 +126,14 @@
                             <div class="widgets-item">
                                 <h2 class="widgets-title mb-4">Populer Tags</h2>
                                 <ul class="widgets-tag">
-                                    <li>
-                                        <a href="#">Fashion</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Organic</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Old Fashion</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Men</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Fashion</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Dress</a>
-                                    </li>
+                                    @foreach (var tag in Model.Tags)
+                                    {
+                                        <li>
+                                            <a href="#" data-id="@tag.Id" class="product-tag">@tag.Name</a>
+                                        </li>
+                                    }
+                                    
+                                    
                                 </ul>
                             </div>
                         </div>
@@ -199,6 +194,7 @@
                             </li>
                         </ul>
                     </div>
+
                     <div class="tab-content">
                         <div class="tab-pane fade show active"
                              id="grid-view"
@@ -215,6 +211,7 @@
                              role="tabpanel"
                              aria-labelledby="list-view-tab">
                             <div class="product-list-view row g-y-30">
+
                                 <div class="col-12">
                                     <div class="product-item">
                                         <div class="product-img">
@@ -1127,6 +1124,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
