--- a/Backend Project/Views/Shop/ProductDetail.cshtml
+++ b/Backend Project/Views/Shop/ProductDetail.cshtml
@@ -445,10 +445,9 @@
         <div class="container">
             <div class="row">
                 <div class="section-title-wrap without-tab">
-                    <h2 class="section-title">Related Products</h2>
+                    <h2 class="section-title">@Model.HeaderBackgrounds["RelatedHeader"]</h2>
                     <p class="section-desc">
-                        Contrary to popular belief, Lorem Ipsum is not simply random
-                        text. It has roots in a piece of classical Latin literature
+                        @Model.HeaderBackgrounds["RelatedDescription"]
                     </p>
                 </div>
                 <div class="col-lg-12">
