--- a/Backend Project/Areas/Admin/Views/Brand/Detail.cshtml
+++ b/Backend Project/Areas/Admin/Views/Brand/Detail.cshtml
@@ -1,55 +1,33 @@
-﻿@model Banner
+﻿@model Brand
 @{
     ViewData["Title"] = "Detail";
 }
 
 <div class="container my-5">
-    <h1> Slider detail</h1>
+    <h1> Brand detail</h1>
     <table class="table table-striped">
+
         <thead>
             <tr>
                 <th>
                     Image
                 </th>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Title
-                </th>
-                
-
             </tr>
         </thead>
 
         <tbody>
-
             <tr>
-
                 <td class="py-1">
                     <img src="~/assets/images/website-images//@Model.Image" style="width:250px;height:200px" />
-
                 </td>
-
-                <td class="py-1">
-                    @Html.Raw(@Model.Name)
-
-                </td>
-
-                <td class="py-1">
-                    @Model.Title
-
-                </td>
-
             </tr>
-
-
         </tbody>
+
     </table>
-
-
     <a class="btn btn-info mt-3" asp-action="Index">Back</a>
 </div>
+
+
 
 
 
