--- a/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -203,6 +203,13 @@
                             <span class="menu-title">Client</span>
                         </a>
                     </li>
+
+                     <li class="nav-item">
+                       <a class="nav-link" asp-area="Admin" asp-controller="Brand" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Brand</span>
+                        </a>
+                    </li>
                     
                     <li class="nav-item">
                         <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">
