Add Tag,Color,Size Section Crud Operations

--- a/Backend Project/Views/Shared/_Layout.cshtml
+++ b/Backend Project/Views/Shared/_Layout.cshtml
@@ -247,7 +247,7 @@
     <script src="~/assets/js/plugins/ion.rangeSlider.min.js"></script>
     <script src="~/assets/js/plugins/mailchimp-ajax.js"></script>
     <script src="~/assets/js/plugins/jquery.counterup.js"></script>
-    @*<script src="~/assets/js/Pronia.js"></script>*@
+    <script src="~/assets/js/Pronia.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
     <!--Main JS (Common Activation Codes)-->
