--- a/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -226,6 +226,20 @@
                     </li>
                     
                     <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Size" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Size</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Tag" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Tag</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">
                             <i class="mdi mdi-view-headline menu-icon"></i>
                             <span class="menu-title">Categories</span>
