Add Category Section Crud Operations

--- a/Backend Project/Areas/Admin/Views/Category/Create.cshtml
+++ b/Backend Project/Areas/Admin/Views/Category/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TagCreateVM
+﻿@model CategoryCreateVM
 
 @{
     ViewData["Title"] = "Create";
@@ -21,8 +21,6 @@
 
     </form>
 </div>
-
-
 
 
 
