--- a/Backend Project/Areas/Admin/Views/Size/Create.cshtml
+++ b/Backend Project/Areas/Admin/Views/Size/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container my-5">
 
-    <form class="form-sample" asp-action="Create" method="post" enctype="multipart/form-data">
+    <form class="form-sample" asp-action="Create" method="post">
 
         <div class="form-group">
             <label for="formFile" class="form-label my-2">Name</label>
