--- a/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -246,6 +246,13 @@
                         </a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Product" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Product</span>
+                        </a>
+                    </li>
+
 
 
                     <li class="nav-item">
