--- a/Backend Project/Views/_ViewImports.cshtml
+++ b/Backend Project/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Backend_Project.Services
 @using Backend_Project.ViewModels
 @using Backend_Project.Services.Interfaces
+@using Backend_Project.Helpers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
