--- a/Backend Project/Areas/Admin/Views/Product/Detail.cshtml
+++ b/Backend Project/Areas/Admin/Views/Product/Detail.cshtml
@@ -22,8 +22,8 @@
             <img src="~/assets/images/website-images//@image.Image" style="width: 150px; height: 150px;" />
         </div>
     }
-    
-    
+
+
     <div class="form-group">
         <label class="my-2">Name</label>
         <input class="form-control" disabled id="customFile" asp-for="Name" />
@@ -47,7 +47,19 @@
     </div>
     <div class="form-group">
         <label class="my-2">Rate</label>
-        <input class="form-control" disabled id="customFile" asp-for="Rate" />
+        <div class="rating-box">
+            <ul>
+                @for (int i = 0; i < Model.Rate; i++)
+                {
+                    <li><i class="fa fa-star"></i></li>
+                }
+                @for (int i = 0; i < 5 - Model.Rate; i++)
+                {
+                    <li><i class="fa fa-star" style="color:gray"></i></li>
+                }
+
+            </ul>
+        </div>
     </div>
     <div class="form-group">
         <label class="my-2">SKU</label>
