--- a/Backend Project/Views/Home/Index.cshtml
+++ b/Backend Project/Views/Home/Index.cshtml
@@ -605,7 +605,7 @@
                             <div class="user-info mb-3">
                                 <div class="user-shape-wrap">
                                     <div class="user-img">
-                                        <img src="~/assets/images/website-images//@client.Image"
+                                        <img style="border-radius:50%"  src="~/assets/images/website-images//@client.Image"
                                          alt="User Image" />
                                     </div>
                                 </div>
