--- a/Backend Project/Views/_ViewImports.cshtml
+++ b/Backend Project/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using Backend_Project.ViewModels
 @using Backend_Project.Services.Interfaces
 @using Backend_Project.Helpers
+@using Backend_Project.ViewModels.Account
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
