--- a/Backend Project/Areas/Admin/Views/Blog/Edit.cshtml
+++ b/Backend Project/Areas/Admin/Views/Blog/Edit.cshtml
@@ -31,7 +31,7 @@
         </div>
         <div class="form-group">
             <label class="my-2">Category</label>
-            <select class="form-control" id="customFile" asp-for="AuthorId" asp-items="@ViewBag.author"></select>
+            <select class="form-control" id="customFile" asp-for="AuthorId" asp-items="@ViewBag.authors"></select>
         </div>
         
         <div class="buttons my-3">
