--- a/Backend Project/Views/Account/Register.cshtml
+++ b/Backend Project/Views/Account/Register.cshtml
@@ -13,31 +13,31 @@
             <div class="row">
                 <div class="col-md-6 col-12">
                     <label>First Name</label>
-                    <input type="text" placeholder="First Name" asp-for="FirstName" />
+                    <input placeholder="First Name" asp-for="FirstName" />
                     <span class="text-danger" asp-validation-for="FirstName"></span>
                 </div>
 
                 <div class="col-md-6 col-12">
                     <label>Last Name</label>
-                    <input type="text" placeholder="Last Name" asp-for="LastName" />
+                    <input placeholder="Last Name" asp-for="LastName" />
                     <span class="text-danger" asp-validation-for="LastName"></span>
                 </div>
 
                 <div class="col-md-12">
                     <label>Email Address*</label>
-                    <input type="text" placeholder="Email Address" asp-for="Email" />
+                    <input placeholder="Email Address" asp-for="Email" />
                     <span class="text-danger" asp-validation-for="Email"></span>
                 </div>
 
                 <div class="col-md-6">
                     <label>Password</label>
-                    <input type="text" placeholder="Password" asp-for="Password" />
+                    <input placeholder="Password" asp-for="Password" />
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
 
                 <div class="col-md-6">
                     <label>Confirm Password</label>
-                    <input type="text" placeholder="Confirm Password" asp-for="ConfirmPassword" />
+                    <input placeholder="Confirm Password" asp-for="ConfirmPassword" />
                     <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
                 </div>
 
