--- a/Backend Project/Views/Account/Login.cshtml
+++ b/Backend Project/Views/Account/Login.cshtml
@@ -21,20 +21,20 @@
 
                             <div class="col-lg-12">
                                 <label>Password</label>
-                                <input type="email" asp-for="Password" placeholder="Password" />
+                                <input asp-for="Password" placeholder="Password" />
                                 <span class="text-danger" asp-validation-for="Password"></span>
                             </div>
 
                             <div class="col-md-8">
                                 <div class="check-box">
-                                    <input type="checkbox" id="remember_me" />
+                                    <input type="checkbox" id="remember_me" asp-for="IsRememberMe" />
                                     <label for="remember_me">Remember me</label>
                                 </div>
                             </div>
 
                             <div class="col-md-4 pt-1 mt-md-0">
                                 <div class="forgotton-password_info">
-                                    <a href="#"> Forgotten pasward?</a>
+                                    <a asp-controller="Account" asp-action="ForgotPassword"> Forgotten pasward?</a>
                                 </div>
                             </div>
 
