Add Author Section Crud Operations

--- a/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -252,6 +252,13 @@
                             <span class="menu-title">Product</span>
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Author" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Author</span>
+                        </a>
+                    </li>
                     
                     <li class="nav-item">
                         <a class="nav-link" href="pages/icons/mdi.html">
