--- a/Backend Project/Views/Account/Login.cshtml
+++ b/Backend Project/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="text-danger" asp-validation-summary="All"></div>
+                <div class="text-danger" style="margin-left:300px" asp-validation-summary="All"></div>
                 <form method="post" asp-action="Login">
                     <div class="login-form" style="position:relative;left:300px">
                         <h4 class="login-title">Login</h4>
