--- a/Backend Project/Views/Account/ResetPassword.cshtml
+++ b/Backend Project/Views/Account/ResetPassword.cshtml
@@ -7,20 +7,21 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <form method="post" asp-controller="Account" asp-action="ConfirmResetPassword">
+                <div class="text-danger mb-2" asp-validation-summary="All"></div>
+                <form method="post" asp-controller="Account" asp-action="ResetPassword">
                     <div class="login-form" style="position:relative;left:300px">
                         <h4 class="login-title">Forgot Password</h4>
 
                         <div class="row">
                             <div class="col-lg-12">
-                                <label>Email</label>
-                                <input type="email" asp-for="Password" placeholder="Password" />
+                                <label>Password</label>
+                                <input asp-for="Password" placeholder="Password" />
                                 <span class="text-danger" asp-validation-for="Password"></span>
                             </div>
 
                             <div class="col-lg-12">
-                                <label>Email</label>
-                                <input type="email" asp-for="ConfirmPassword" placeholder="Repeat Password" />
+                                <label>Repeat Password</label>
+                                <input asp-for="ConfirmPassword" placeholder="Repeat Password" />
                                 <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
                             </div>
 
