--- a/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Backend Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -259,14 +259,15 @@
                             <span class="menu-title">Author</span>
                         </a>
                     </li>
-                    
+
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/icons/mdi.html">
-                            <i class="mdi mdi-emoticon menu-icon"></i>
-                            <span class="menu-title">Icons</span>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Social" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Social</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                  
+                    @*<li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">User Pages</span>
@@ -281,13 +282,8 @@
                                 <li class="nav-item"> <a class="nav-link" href="pages/samples/lock-screen.html"> Lockscreen </a></li>
                             </ul>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Documentation</span>
-                        </a>
-                    </li>
+                    </li>*@
+                  
                 </ul>
             </nav>
 
