--- a/Backend Project/Areas/Admin/Views/Social/Index.cshtml
+++ b/Backend Project/Areas/Admin/Views/Social/Index.cshtml
@@ -1,7 +1,6 @@
-﻿
-@model List<Author>
+﻿@model List<Social>
 @{
-    ViewData["Title"] = "Author";
+    ViewData["Title"] = "Social";
 }
 
 <div class="container my-5">
@@ -11,7 +10,7 @@
             <thead>
                 <tr>
                     <th>
-                        Name
+                        Image
                     </th>
                     <th>
                         Operations
@@ -20,18 +19,18 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var author in Model)
+                @foreach (var social in Model)
                 {
                     <tr>
                         <td class="py-1">
-                            @Html.Raw(@author.Name)
+                            @Html.Raw(@social.Image)
                         </td>
 
 
                         <td>
-                            <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@author.Id">Info</a>
-                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@author.Id">Edit</a>
-                            <form style="display:inline-block" asp-action="Delete" asp-route-id="@author.Id" method="post">
+                            <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@social.Id">Info</a>
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@social.Id">Edit</a>
+                            <form style="display:inline-block" asp-action="Delete" asp-route-id="@social.Id" method="post">
                                 <button type="submit" class="btn btn-outline-danger">Delete</button>
                             </form>
                         </td>
